# biparallel

./: .gitignore  LICENSE  README.md  bisputils.py  pyproject.toml  setup.py  test.ipynb
biparallel/: __init__.py  biparallel.py
biparallel/core/: __init__.py  core_functions.c  core_functions.h
