[build-system]
requires = [
	"setuptools>=68",
	"wheel",
	"numpy>=1.22",
]
build-backend = "setuptools.build_meta"

[project]
name = "biparallel"
version = "0.1.0"
description = "Fast bispectrum calculation with a C parallel implementation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
	{ name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
	"numpy>=1.22",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["biparallel*"]
